# primality-test

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/: main.ts  style.css
lib/: main.ts
src/: main.ts
test/: main.test.ts
wasm/: Cargo.toml
wasm/src/: bigint.rs  lib.rs
