[package]
name = "rust-wasm"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = "^0.2"
num-bigint = { version = "^0.4" }
anyhow = "^1.0"
# serde = { version = "^1.0", features = ["derive"] }
# serde-wasm-bindgen = "^0.6"
# js-sys = "^0.3"
# web-sys = { version = "^0.3", features = ["Window", "console"] }
# tsify = "^0.5"
